test/covert/stack.meet

// a simple stack write in meet.

impl Stack(fixed: boolean) {

  open enum Type -> INTEGER, STRING, FLOAT

  open var stack: any = [], valueFixedType: Type = null
  
  init -> valueFixedType = this.fixed
  
  fun push(value: any) -> any {
    if valueFixedType -> valueFixedType = type(value)
    
    if type(value) != valueFixedType {
      println 'cannot push different value for fixed type.'
      
      return null
    } else {
      stack.insert(value)
      
      return value
    }
  }
  
  fun pop() -> any -> stack.remove(stack.length - 1)
  
  fun peek() -> any -> stack.at(stack.length - 1)
  
  fun size() -> int -> stack.size()
}

var a = new Stack(true)

println a.push(1223)
println a.push('12') // error
